# openlakehouse

./: .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  paper.yml
config/: config.example.yaml  policy.example.yaml
docs/: architecture.md  research_architecture.md
evaluation/: complexity_metrics.py  experiment_1_metadata_normalization.py  experiment_2_query_normalization.py  experiment_3_governance_enforcement.py  experiment_4_agent_coupling.py  experiment_5_platform_extension.py  experiment_utils.py  governance_matrix.py  performance_probe.py  run_all_experiments.py  semantic_consistency.py
experiments/: canonical_interface_demo.py
output/demo/: canonical_interface_demo.json  canonical_interface_demo.md
output/evaluations/: experiment_1_metadata_normalization.csv  experiment_1_metadata_normalization.json  experiment_1_metadata_normalization.md  experiment_2_query_normalization.csv  experiment_2_query_normalization.json  experiment_2_query_normalization.md  experiment_3_governance_enforcement.csv  experiment_3_governance_enforcement.json  experiment_3_governance_enforcement.md  experiment_4_agent_coupling.csv  experiment_4_agent_coupling.json  experiment_4_agent_coupling.md  experiment_5_platform_extension.csv  experiment_5_platform_extension.json  experiment_5_platform_extension.md  overall_findings.md  summary.json  summary.md
paper/: paper.bib  paper.docx  paper.md
src/openlakehouse/: __init__.py  __main__.py
tests/: conftest.py
tests/unit/: test_aws_adapter.py  (+10 more)
(+22 files in other folders)
