[project]
name = "openlakehouse"
version = "0.1.0"
description = "MCP server exposing governed, unified read access to Databricks and AWS lakehouse data"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.6",
    "pydantic>=2.6",
    "pyyaml>=6.0",
    "boto3>=1.34",
    "databricks-sdk>=0.30",
    "databricks-sql-connector>=3.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.14",
    "moto[glue,athena,s3]>=5.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
